--- a/public/packages/assets/css/styles.css
+++ b/public/packages/assets/css/styles.css
@@ -583,6 +583,10 @@ video {
 	margin-top: 1.25rem;
 	margin-bottom: 1.25rem;
 }
+.my-3 {
+	margin-top: 0.75rem;
+	margin-bottom: 0.75rem;
+}
 .mt-10 {
 	margin-top: 2.5rem;
 }
@@ -610,14 +614,14 @@ video {
 .mb-3 {
 	margin-bottom: 0.75rem;
 }
+.mt-3 {
+	margin-top: 0.75rem;
+}
 .mb-2 {
 	margin-bottom: 0.5rem;
 }
 .mb-4 {
 	margin-bottom: 1rem;
-}
-.mt-3 {
-	margin-top: 0.75rem;
 }
 .mt-4 {
 	margin-top: 1rem;
@@ -627,6 +631,9 @@ video {
 }
 .ml-4 {
 	margin-left: 1rem;
+}
+.mt-5 {
+	margin-top: 1.25rem;
 }
 .flex {
 	display: flex;
@@ -667,11 +674,32 @@ video {
 .h-96 {
 	height: 24rem;
 }
+.h-52 {
+	height: 13rem;
+}
 .w-5 {
 	width: 1.25rem;
 }
 .w-full {
 	width: 100%;
+}
+.w-32 {
+	width: 8rem;
+}
+.w-40 {
+	width: 10rem;
+}
+.w-96 {
+	width: 24rem;
+}
+.w-20 {
+	width: 5rem;
+}
+.w-52 {
+	width: 13rem;
+}
+.w-72 {
+	width: 18rem;
 }
 .max-w-md {
 	max-width: 28rem;
@@ -687,6 +715,18 @@ video {
 }
 .max-w-none {
 	max-width: none;
+}
+.max-w-4xl {
+	max-width: 56rem;
+}
+.max-w-2xl {
+	max-width: 42rem;
+}
+.max-w-xl {
+	max-width: 36rem;
+}
+.max-w-lg {
+	max-width: 32rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -814,6 +854,26 @@ video {
 	--tw-border-opacity: 1;
 	border-color: rgba(0, 0, 0, var(--tw-border-opacity));
 }
+.border-gray-600 {
+	--tw-border-opacity: 1;
+	border-color: rgba(75, 85, 99, var(--tw-border-opacity));
+}
+.border-gray-400 {
+	--tw-border-opacity: 1;
+	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
+}
+.border-gray-500 {
+	--tw-border-opacity: 1;
+	border-color: rgba(107, 114, 128, var(--tw-border-opacity));
+}
+.border-gray-200 {
+	--tw-border-opacity: 1;
+	border-color: rgba(229, 231, 235, var(--tw-border-opacity));
+}
+.border-gray-300 {
+	--tw-border-opacity: 1;
+	border-color: rgba(209, 213, 219, var(--tw-border-opacity));
+}
 .bg-red-400 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(248, 113, 113, var(--tw-bg-opacity));
@@ -846,13 +906,17 @@ video {
 	--tw-bg-opacity: 1;
 	background-color: rgba(156, 163, 175, var(--tw-bg-opacity));
 }
+.bg-gray-200 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+}
 .bg-gray-50 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(249, 250, 251, var(--tw-bg-opacity));
 }
-.bg-gray-200 {
+.bg-gray-600 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(229, 231, 235, var(--tw-bg-opacity));
+	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
 }
 .bg-opacity-50 {
 	--tw-bg-opacity: 0.5;
@@ -878,6 +942,18 @@ video {
 }
 .p-3 {
 	padding: 0.75rem;
+}
+.p-2 {
+	padding: 0.5rem;
+}
+.p-20 {
+	padding: 5rem;
+}
+.p-40 {
+	padding: 10rem;
+}
+.p-5 {
+	padding: 1.25rem;
 }
 .px-6 {
 	padding-left: 1.5rem;
@@ -935,13 +1011,17 @@ video {
 	padding-top: 5rem;
 	padding-bottom: 5rem;
 }
+.py-5 {
+	padding-top: 1.25rem;
+	padding-bottom: 1.25rem;
+}
 .py-3 {
 	padding-top: 0.75rem;
 	padding-bottom: 0.75rem;
 }
-.py-5 {
-	padding-top: 1.25rem;
-	padding-bottom: 1.25rem;
+.px-7 {
+	padding-left: 1.75rem;
+	padding-right: 1.75rem;
 }
 .pt-2 {
 	padding-top: 0.5rem;
@@ -966,6 +1046,15 @@ video {
 }
 .pb-8 {
 	padding-bottom: 2rem;
+}
+.pt-3 {
+	padding-top: 0.75rem;
+}
+.pl-4 {
+	padding-left: 1rem;
+}
+.pr-2 {
+	padding-right: 0.5rem;
 }
 .text-center {
 	text-align: center;
@@ -1007,13 +1096,13 @@ video {
 	font-size: 3rem;
 	line-height: 1;
 }
-.text-base {
-	font-size: 1rem;
-	line-height: 1.5rem;
-}
 .text-2xl {
 	font-size: 1.5rem;
 	line-height: 2rem;
+}
+.text-base {
+	font-size: 1rem;
+	line-height: 1.5rem;
 }
 .font-bold {
 	font-weight: 700;
@@ -1080,6 +1169,18 @@ video {
 .text-gray-400 {
 	--tw-text-opacity: 1;
 	color: rgba(156, 163, 175, var(--tw-text-opacity));
+}
+.text-indigo-600 {
+	--tw-text-opacity: 1;
+	color: rgba(79, 70, 229, var(--tw-text-opacity));
+}
+.text-black {
+	--tw-text-opacity: 1;
+	color: rgba(0, 0, 0, var(--tw-text-opacity));
+}
+.text-gray-100 {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
 }
 .shadow-md {
 	--tw-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
@@ -1216,6 +1317,10 @@ video {
 		grid-template-columns: repeat(4, minmax(0, 1fr));
 	}
 
+	.md\:grid-cols-2 {
+		grid-template-columns: repeat(2, minmax(0, 1fr));
+	}
+
 	.md\:flex-row {
 		flex-direction: row;
 	}
@@ -1252,6 +1357,14 @@ video {
 		--tw-bg-opacity: 0;
 	}
 
+	.md\:p-2 {
+		padding: 0.5rem;
+	}
+
+	.md\:p-5 {
+		padding: 1.25rem;
+	}
+
 	.md\:py-12 {
 		padding-top: 3rem;
 		padding-bottom: 3rem;
@@ -1280,12 +1393,21 @@ video {
 		line-height: 1.75rem;
 	}
 
+	.md\:text-4xl {
+		font-size: 2.25rem;
+		line-height: 2.5rem;
+	}
+
 	.md\:text-white {
 		--tw-text-opacity: 1;
 		color: rgba(255, 255, 255, var(--tw-text-opacity));
 	}
 }
 @media (min-width: 1024px) {
+
+	.lg\:grid-cols-3 {
+		grid-template-columns: repeat(3, minmax(0, 1fr));
+	}
 
 	.lg\:space-y-9 > :not([hidden]) ~ :not([hidden]) {
 		--tw-space-y-reverse: 0;
